# rom_robot_class

./: .gitignore  .gitmodules  README.md  rom_protocols.h  rom_robot.hpp  rom_serial.hpp
bobo_description/: CMakeLists.txt  README.md
bobo_description/launch/: robot1_description.launch.py  robot2_description.launch.py  sim_robot1_description.launch.py
bobo_description/urdf/: robot.urdf  robot1.xacro  robot1_complete.urdf.xacro  robot1_ros2_control.xacro  robot2.xacro  robot2_ros2_control.xacro  robot2_ros2_control_imu.xacro  sim_robot1_ros2_control.xacro
bobo_hardware/: 99-rom-robot-controller.rules  CMakeLists.txt  README.md  bobo_hardware.xml  package.xml
bobo_hardware/bringup/config/: diffbot_controllers.yaml
bobo_hardware/bringup/launch/: test.launch.py
bobo_hardware/config/: diffbot_controllers.yaml
bobo_hardware/controllers/: gpio_controller.cpp  imu_controller.cpp  imu_controller_1.cpp
bobo_hardware/controllers/include/bobo_hardware/: gpio_controller.hpp  imu_controller.hpp  imu_controller_1.hpp
bobo_hardware/controllers/include/bobo_hardware/raw/: rawimu_controller.cpp  rawimu_controller.hpp
bobo_hardware/hardware/: diffbot_system.cpp
bobo_hardware/hardware/include/bobo_hardware/: diffbot_system.hpp  rom_communication.h  rom_robot.hpp  stm32_comms.hpp  visibility_control.h  wheel.hpp
bobo_hardware/launch/: bobo_hw.launch.py  gpio_popo.launch.py  popo.launch.py  test.launch.py
rom_msgs/: CMakeLists.txt  package.xml
rom_robot_driver/: CMakeLists.txt  package.xml
rom_robot_driver/include/rom_robot_driver/: rom_protocols.h  rom_robot.hpp  wheel.hpp
stm32f4_system_interface_gpio/: CMakeLists.txt  README.md  package.xml  stm32f4_system_interface_gpio.xml
stm32f4_system_interface_gpio/bringup/config/: diffbot_controllers.yaml
stm32f4_system_interface_gpio/bringup/launch/: gpio_popo.launch.py  popo.launch.py
stm32f4_system_interface_gpio/controllers/: gpio_controller.cpp
stm32f4_system_interface_gpio/controllers/include/stm32f4_system_interface_gpio/: gpio_controller.hpp
stm32f4_system_interface_gpio/description/launch/: view_robot.launch.py
stm32f4_system_interface_gpio/description/ros2_control/: diffbot.ros2_control.xacro  diffbot.ros2_control.xacro.bk
stm32f4_system_interface_gpio/description/rviz/: diffbot.rviz
stm32f4_system_interface_gpio/description/urdf/: diffbot.urdf.xacro
stm32f4_system_interface_gpio/doc/: userdoc.rst
stm32f4_system_interface_gpio/hardware/: diffbot_system.cpp
stm32f4_system_interface_gpio/hardware/include/stm32f4_system_interface_gpio/: diffbot_system.hpp  rom_robot.hpp  rom_serial.hpp  visibility_control.h  wheel.hpp
